my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENARGT/ENARGT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:13:9: error ENARGT: no type for output parameter 'r'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:13:9: error ENARGT: no type for output parameter 'r'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:22:9: error ENARGT: no type for input parameter 'x'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:22:9: error ENARGT: no type for input parameter 'x'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:34:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:28:1: error ENARGT: no type for input parameter 'x'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:36:5: called from here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:31:1: error ENARGT: no type for output parameter 'x'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENARGT.dml:39:5: called from here
